# pytest-bdd

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
libs/: nso.py  ssh_client.py
src/libs/: nso.py
src/nso_bdd_test_pkg/libs/: nso.py  nso_ssh.py
src/nso_bdd_test_pkg/tests/features/: ios_netconf.feature
src/nso_bdd_test_pkg/tests/step_defs/: test_ios_netconf_steps.py
src/nso_bdd_test_pkg/xml/: mtu_config.xml  remove_trace.xml
src/nso_bdd_test_pkg/xml/create/: mtu.xml
src/nso_bdd_test_pkg/xml/delete/: interface_config.xml  mtu.xml
src/tests/step_defs/: ios_netconf_steps.py
tests/features/: ios_netconf.feature
tests/step_defs/: ios_netconf_steps.py
xml/: interface_config.xml  set_trace.xml
xml/create/: interface_config.xml
