[metadata]
name = nso_bdd_test_pkg
version = 0.0.1
author = Tony Gionfriddo
author_email = tgio1129@gmail.com
description = NSO Behavioral Driven Development Test Framework
long_description = file: README.md
license = MIT License
url = https://github.com/tonygionfriddo/pytest-bdd
classifiers =
    Framework :: pytest
    License :: MIT
    Programming Language :: Python :: 3.7

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7

[options.packages.find]
where=src